Fix gap in category navbar

--- a/public/css/layout.css
+++ b/public/css/layout.css
@@ -142,7 +142,7 @@ ul.category-sub-menu li a{
     display: block;
     font-size: 17px;
     text-transform: capitalize;
-    line-height: 35px;
+    line-height: 20px;
     margin: 0;
     padding: 0;
     border: none;
